--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@vitejs/plugin-react": "^1.3.2",
     "glob": "^9.2.1",
     "prettier": "^2.7.1",
+    "rollup-plugin-copy": "^3.4.0",
     "typescript": "^4.6.4",
     "vite": "^2.9.13",
     "vite-plugin-zip-pack": "^1.0.5"
